# velo2_cam_no_ros

./: CMakeLists.txt  FindROS.cmake
include/: calibration_server.h  lidar_pattern.h  mono_qr_pattern.h  params.h  stereo_pattern.h  velo2cam_utils.h
src/: calibration_server.cpp  lidar_pattern.cpp  mono_qr_pattern.cpp  stereo_pattern.cpp  tester.cpp
